# libchamp-imp

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/champ/share/champ/: package.bash  package.zsh
install/champ_msgs/share/champ_msgs/: package.bash  package.zsh
install/quadruped_mujoco/share/quadruped_mujoco/: package.bash  package.zsh
log/: latest_build
quadruped_mujoco/: package.xml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/: mujoco_interface.hpp
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/bla/: basic_linear_algebra.h
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/body_controller/: body_controller.hpp
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/controllers/: quadruped_controller.hpp  trot_controller.hpp  waypoint_controller.hpp
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/leg_controller/: leg_controller.hpp  phase_generator.hpp
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/macros/: macros.h
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/quadruped_base/: quadruped_components.hpp  quadruped_leg.hpp
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/quadruped_mujoco/msg/: contacts.h  contacts.hpp  contacts_stamped.h  contacts_stamped.hpp  joints.h  joints.hpp  pose.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  velocities.h  velocities.hpp
ros2_ws/install/quadruped_mujoco/include/quadruped_mujoco/quadruped_mujoco/msg/detail/: contacts__rosidl_typesupport_fastrtps_c.h  contacts__rosidl_typesupport_fastrtps_cpp.hpp  contacts__rosidl_typesupport_introspection_cpp.hpp  contacts__traits.hpp  contacts__type_support.c  contacts__type_support.cpp  contacts__type_support.h  contacts__type_support.hpp  contacts_stamped__builder.hpp  contacts_stamped__functions.c  contacts_stamped__rosidl_typesupport_fastrtps_c.h  joints__struct.h  (+32 more)
ros2_ws/install/quadruped_mujoco/lib/quadruped_mujoco/: mujoco_interface_node  mujoco_sim_node
ros2_ws/install/quadruped_mujoco/share/ament_index/resource_index/package_run_dependencies/: quadruped_mujoco
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_quadruped_mujoco__rosidl_generator_cppExport.cmake  export_quadruped_mujoco__rosidl_generator_pyExport.cmake  quadruped_mujocoExport-noconfig.cmake  quadruped_mujoco__rosidl_typesupport_cExport-noconfig.cmake  quadruped_mujoco__rosidl_typesupport_cppExport.cmake  quadruped_mujoco__rosidl_typesupport_introspection_cExport-noconfig.cmake  quadruped_mujoco__rosidl_typesupport_introspection_cExport.cmake  quadruped_mujoco__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/hook/: cmake_module_path.dsv  cmake_module_path.ps1  cmake_module_path.sh
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/launch/: absolute_debug.launch.py  debug_compat.launch.py  debug_mujoco.launch.py  stand.launch.py  teleop.launch.py  test_original.launch.py  trot_without_sim.launch.py  turn.launch.py  view_model.launch.py  visualize_debug.launch.py
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/models/meshes/: base.stl  hip.stl
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/models/mjcf/: simple_yobotics.xml  yobotics.xml  yobotics_compat.xml  yobotics_complete.xml
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/msg/: ContactsStamped.idl  ContactsStamped.msg  Joints.idl  Joints.msg  Pose.idl
ros2_ws/install/quadruped_mujoco/share/quadruped_mujoco/urdf/: yobotics.urdf
ros2_ws/log/: latest_build
ros2_ws/src/quadruped_mujoco/: CMakeLists.txt
ros2_ws/src/quadruped_mujoco/cmake/: Findmujoco.cmake
ros2_ws/src/quadruped_mujoco/config/: gait.yaml  navigation.rviz  navigation.yaml
ros2_ws/src/quadruped_mujoco/config/gait/: trot.yaml  turn.yaml
ros2_ws/src/quadruped_mujoco/include/quadruped_mujoco/controllers/: turn_controller.hpp
ros2_ws/src/quadruped_mujoco/include/quadruped_mujoco/geometry/: geometry.hpp
ros2_ws/src/quadruped_mujoco/include/quadruped_mujoco/kinematics/: kinematics.hpp
ros2_ws/src/quadruped_mujoco/include/quadruped_mujoco/leg_controller/: leg_controller.hpp  trajectory_planner.hpp
ros2_ws/src/quadruped_mujoco/include/quadruped_mujoco/quadruped_base/: gait_config.hpp  quadruped_base.hpp  quadruped_components.hpp
ros2_ws/src/quadruped_mujoco/launch/: simulation.launch.py  trot.launch.py  waypoint_nav.launch.py
ros2_ws/src/quadruped_mujoco/models/meshes/: lower_leg.stl  upper_leg.stl
ros2_ws/src/quadruped_mujoco/models/mjcf/: yobotics.xml
ros2_ws/src/quadruped_mujoco/msg/: ContactsStamped.msg  Joints.msg  Velocities.msg
ros2_ws/src/quadruped_mujoco/scripts/: test_model.py
ros2_ws/src/quadruped_mujoco/src/: mujoco_interface.cpp
ros2_ws/src/quadruped_mujoco/src/controllers/: quadruped_controller.cpp
ros2_ws/src/quadruped_mujoco/src/nodes/: mujoco_sim_node.cpp  quadruped_controller_node.cpp  trot_node.cpp  turn_node.cpp  waypoint_nav_node.cpp
(+10 files in other folders)
